[feature] add postgresql with body integration
